explain implementation caveat

--- a/hw1/hw1.ipynb
+++ b/hw1/hw1.ipynb
@@ -727,6 +727,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### (TL; DR) An implementation caveat\n",
+    "\n",
+    "The scaffold of `compute_gradient_of_variables` is\n",
+    "\n",
+    "```python\n",
+    "def compute_gradient_of_variables(output_tensor, out_grad):\n",
+    "    …\n",
+    "    ### BEGIN YOUR SOLUTION\n",
+    "    for node in reverse_topo_order:\n",
+    "        # get list of grad contributions\n",
+    "        output_grads_list = …\n",
+    "        # compute grad of current node w.r.t. output node\n",
+    "        node.grad = sum_node_list(output_grads_list) # ← caveat\n",
+    "        # propagate grad to inputs\n",
+    "        …\n",
+    "    ### END YOUR SOLUTION\n",
+    "```\n",
+    "\n",
+    "where `sum_node_list` is defined at the **bottom** of `autograd.py` as\n",
+    "\n",
+    "```python\n",
+    "from operator  import add\n",
+    "from functools import reduce\n",
+    "…\n",
+    "#def sum_node_list(node_list):\n",
+    "#    \"\"\"Custom sum function in order to avoid create redundant nodes in Python sum implementation.\"\"\"\n",
+    "#    return reduce(add, node_list)\n",
+    "sum_node_list = lambda node_list : reduce(add, node_list)\n",
+    "```\n",
+    "\n",
+    "When summing elements in `output_grads_list` inside the `for` loop, one may be tempted to use Python built-in [`sum`](https://docs.python.org/3/library/functions.html#sum) due to significant performance boost (up to $10$ times when list length is $10^8$) over `sum_node_list`. However, `sum` may yield a result of different `dtype`. This happens when every element in `output_grads_list` has shape `()`. Below is a toy example.\n",
+    "\n",
+    "```python\n",
+    "l = [ndl.Tensor(1.0, dtype='float32'),\n",
+    "     ndl.Tensor(2.0, dtype='float32')]\n",
+    "s = sum(l)\n",
+    "s.dtype\n",
+    "# output\n",
+    "dtype('float64') # `dtype` mismatch\n",
+    "```\n",
+    "\n",
+    "In contrast, `dtype` is maintained whenever there is **at least one** element with **nonempty** shape.\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "l = [ndl.Tensor( 1.0 , dtype='float32'),\n",
+    "     ndl.Tensor([2.0], dtype='float32')]\n",
+    "s = sum(l)\n",
+    "s.dtype\n",
+    "# output\n",
+    "dtype('float32')\n",
+    "```\n",
+    "\n",
+    "`sum_node_list` eschews the problem. `dtype` coherence is pivotal when implementing optimizers such as `SGD`. Mismatched `dtype` parameters update leads to setter error."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
