add detailed comments

--- a/hw1/hw1.ipynb
+++ b/hw1/hw1.ipynb
@@ -371,7 +371,7 @@
     "- `Transpose`\n",
     "- `Reshape`\n",
     "- `BroadcastTo`<br>\n",
-    "  Pay attention to the case where a `float` (instead of a `Tensor`) is broadcast.\n",
+    "  [Here](http://coldattic.info/post/116/) is a post on the derivative of broadcasting. Pay attention to the case where a `float` (instead of a `Tensor`) is broadcast.\n",
     "- `Summation`<br>\n",
     "  $\\frac{\\partial \\verb|summation|(\\mathcal{X})}{\\partial \\mathcal{X}} = \\mathbf{J}$ regardless of input. What matters is correct shape.\n",
     "- `MatMul`<br>\n",
@@ -563,7 +563,8 @@
    "source": [
     "### Hints\n",
     "\n",
-    "- Ensure that you do a post-order depth-first search, otherwise the test cases will fail. \n",
+    "- Ensure that you do a post-order depth-first search, otherwise the test cases will fail.<br>\n",
+    "  Each node in the computational graph records its **inputs** rather than outgoing nodes. Thus, the graph is **implemented** in the **opposite** direction to that data flow.\n",
     "- The `topo_sort_dfs` method is not required, but we find it useful to use this as a recursive helper function. \n",
     "- The \"Reverse mode AD by extending computational graph\" section of the Lecture 4 slides walks through an example of the proper node ordering. \n",
     "- We will be traversing this sorting backwards in later parts of this homework, but the `find_topo_sort` should return the node ordering in the forward direction.\n"
