--- a/hw2/hw2.ipynb
+++ b/hw2/hw2.ipynb
@@ -1326,6 +1326,8 @@
     "\n",
     "$$\n",
     "\\begin{align*}\n",
+    "m_0, v_0, t &\\leftarrow 0 \\\\\n",
+    "\\\\\n",
     "g_t &\\leftarrow \\nabla_\\theta f(\\theta_t) \\color{blue}{+ \\lambda \\theta_t} \\\\\n",
     "m_{t+1} &\\leftarrow \\beta_1 m_t + (1-\\beta_1) g_t \\\\\n",
     "v_{t+1} &\\leftarrow \\beta_2 v_t + (1-\\beta_2) g_t^2 \\\\\n",
