finish part 2; refactor sparse memory indexing

--- a/hw3/hw3.ipynb
+++ b/hw3/hw3.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 57,
    "id": "06d6c5e0",
    "metadata": {
     "id": "09eedbc6"
@@ -67,36 +67,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-- The C compiler identification is GNU 9.4.0\n",
-      "-- The CXX compiler identification is GNU 9.4.0\n",
-      "-- Check for working C compiler: /usr/bin/cc\n",
-      "-- Check for working C compiler: /usr/bin/cc -- works\n",
-      "-- Detecting C compiler ABI info\n",
-      "-- Detecting C compiler ABI info - done\n",
-      "-- Detecting C compile features\n",
-      "-- Detecting C compile features - done\n",
-      "-- Check for working CXX compiler: /usr/bin/c++\n",
-      "-- Check for working CXX compiler: /usr/bin/c++ -- works\n",
-      "-- Detecting CXX compiler ABI info\n",
-      "-- Detecting CXX compiler ABI info - done\n",
-      "-- Detecting CXX compile features\n",
-      "-- Detecting CXX compile features - done\n",
-      "-- Found Python: /home/willyu/anaconda3/envs/10-414/bin/python3.9 (found version \"3.9.13\") found components: Development Interpreter \n",
-      "-- Performing Test HAS_FLTO\n",
-      "-- Performing Test HAS_FLTO - Success\n",
       "-- Found pybind11: /home/willyu/anaconda3/envs/10-414/lib/python3.9/site-packages/pybind11/include (found version \"2.10.0\")\n",
-      "-- Looking for pthread.h\n",
-      "-- Looking for pthread.h - found\n",
-      "-- Performing Test CMAKE_HAVE_LIBC_PTHREAD\n",
-      "-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Failed\n",
-      "-- Looking for pthread_create in pthreads\n",
-      "-- Looking for pthread_create in pthreads - not found\n",
-      "-- Looking for pthread_create in pthread\n",
-      "-- Looking for pthread_create in pthread - found\n",
-      "-- Found Threads: TRUE  \n",
-      "-- Found CUDA: /home/willyu/anaconda3/envs/10-414 (found version \"11.7\") \n",
       "-- Found cuda, building cuda backend\n",
-      "Sun Nov  6 17:06:09 2022       \n",
+      "Tue Nov  8 17:29:28 2022       \n",
       "+-----------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 470.57.02    Driver Version: 470.57.02    CUDA Version: 11.4     |\n",
       "|-------------------------------+----------------------+----------------------+\n",
@@ -105,15 +78,15 @@
       "|                               |                      |               MIG M. |\n",
       "|===============================+======================+======================|\n",
       "|   0  NVIDIA GeForce ...  On   | 00000000:06:00.0 Off |                  N/A |\n",
-      "| 30%   38C    P8    17W / 350W |    261MiB / 24268MiB |      0%      Default |\n",
+      "| 30%   45C    P8    17W / 350W |    261MiB / 24268MiB |      0%      Default |\n",
       "|                               |                      |                  N/A |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "|   1  NVIDIA GeForce ...  On   | 00000000:41:00.0 Off |                  N/A |\n",
-      "| 30%   44C    P8    22W / 350W |      8MiB / 24268MiB |      0%      Default |\n",
+      "| 94%   91C    P2   281W / 350W |   4209MiB / 24268MiB |     99%      Default |\n",
       "|                               |                      |                  N/A |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "|   2  NVIDIA GeForce ...  On   | 00000000:61:00.0 Off |                  N/A |\n",
-      "| 39%   36C    P8    15W / 350W |      8MiB / 24268MiB |      0%      Default |\n",
+      "| 86%   71C    P2   325W / 350W |  18669MiB / 24268MiB |    100%      Default |\n",
       "|                               |                      |                  N/A |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "                                                                               \n",
@@ -125,7 +98,9 @@
       "|    0   N/A  N/A      1410      G   /usr/lib/xorg/Xorg                  4MiB |\n",
       "|    0   N/A  N/A   2748028      C   ...a3/envs/10-414/bin/python      253MiB |\n",
       "|    1   N/A  N/A      1410      G   /usr/lib/xorg/Xorg                  4MiB |\n",
+      "|    1   N/A  N/A   3859459      C   python                           4201MiB |\n",
       "|    2   N/A  N/A      1410      G   /usr/lib/xorg/Xorg                  4MiB |\n",
+      "|    2   N/A  N/A   3689904      C   python                          18661MiB |\n",
       "+-----------------------------------------------------------------------------+\n",
       "-- Autodetected CUDA architecture(s):  8.6 8.6 8.6\n",
       "-- Configuring done\n",
@@ -134,13 +109,6 @@
       "make[1]: Entering directory '/home/willyu/10-414/hw3/build'\n",
       "make[2]: Entering directory '/home/willyu/10-414/hw3/build'\n",
       "make[3]: Entering directory '/home/willyu/10-414/hw3/build'\n",
-      "[ 25%] \u001b[34m\u001b[1mBuilding NVCC (Device) object CMakeFiles/ndarray_backend_cuda.dir/src/ndarray_backend_cuda_generated_ndarray_backend_cuda.cu.o\u001b[0m\n",
-      "/home/willyu/10-414/hw3/src/ndarray_backend_cuda.cu(99): warning #177-D: variable \"gid\" was declared but never referenced\n",
-      "\n",
-      "\u001b[35m\u001b[1mScanning dependencies of target ndarray_backend_cuda\u001b[0m\n",
-      "make[3]: Leaving directory '/home/willyu/10-414/hw3/build'\n",
-      "make[3]: Entering directory '/home/willyu/10-414/hw3/build'\n",
-      "[ 50%] \u001b[32m\u001b[1mLinking CXX shared module ../python/needle/backend_ndarray/ndarray_backend_cuda.cpython-39-x86_64-linux-gnu.so\u001b[0m\n",
       "make[3]: Leaving directory '/home/willyu/10-414/hw3/build'\n",
       "[ 50%] Built target ndarray_backend_cuda\n",
       "make[3]: Entering directory '/home/willyu/10-414/hw3/build'\n",
@@ -262,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "id": "35fe74f4",
    "metadata": {
     "id": "835c3880"
@@ -277,7 +245,7 @@
       "cachedir: .pytest_cache\n",
       "rootdir: /home/willyu/10-414/hw3\n",
       "plugins: anyio-3.6.1\n",
-      "collected 136 items / 126 deselected / 10 selected                             \u001b[0m\n",
+      "collected 124 items / 114 deselected / 10 selected                             \u001b[0m\n",
       "\n",
       "tests/test_ndarray.py::test_permute[cpu-params0] \u001b[32mPASSED\u001b[0m\u001b[32m                  [ 10%]\u001b[0m\n",
       "tests/test_ndarray.py::test_permute[cpu-params1] \u001b[32mPASSED\u001b[0m\u001b[32m                  [ 20%]\u001b[0m\n",
@@ -290,7 +258,7 @@
       "tests/test_ndarray.py::test_getitem[cpu-params3] \u001b[32mPASSED\u001b[0m\u001b[32m                  [ 90%]\u001b[0m\n",
       "tests/test_ndarray.py::test_broadcast_to[cpu-params0] \u001b[32mPASSED\u001b[0m\u001b[32m             [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m====================== \u001b[32m\u001b[1m10 passed\u001b[0m, \u001b[33m126 deselected\u001b[0m\u001b[32m in 0.17s\u001b[0m\u001b[32m ======================\u001b[0m\n"
+      "\u001b[32m====================== \u001b[32m\u001b[1m10 passed\u001b[0m, \u001b[33m114 deselected\u001b[0m\u001b[32m in 0.20s\u001b[0m\u001b[32m ======================\u001b[0m\n"
      ]
     }
    ],
@@ -324,9 +292,9 @@
     "* `EwiseSetitem()`\n",
     "* `ScalarSetitem()`\n",
     "\n",
-    "To see why these are all in the same category, let's consider the implementation of the `Compact()` function.  Recall that a matrix is considered compact if it is layed out sequentially in memory in \"row-major\" form (but really a generalization of row-many to higher dimensional arrays), i.e. with the last dimension first, followed by the second to last dimension, etc, all the way to the first.  In our implementation, we also require that the total size of allocated backend array be equal to the size of the array (i.e., the underlying array also can't have any data before or after the array data, which e.g., implies that the `.offset` field equals zero).\n",
+    "To see why these are all in the same category, let's consider the implementation of the `Compact()` function. Recall that a matrix is considered compact if it is laid out sequentially in memory in a \"row-major\" fashion (but really a generalization of row — many to higher dimensional arrays), i.e. with the last dimension first, followed by the second to last dimension, etc, all the way to the first.  In our implementation, we also require that the total size of allocated backend array be equal to the size of the array (i.e., the underlying array also cannot have any data before or after the array data, which e.g., implies that the `.offset` field equals zero).\n",
     "\n",
-    "Now let's consider, using a 3D array as a an example, of how a compact call might work.  Here `shape` and `strides` are the shape and strides of the matrix being compacted (i.e., before we have compacted it).\n",
+    "Now let's consider, taking a $3$D array for example, how a `Compact()` call might work.  Here `shape` and `strides` are the shape and strides of the matrix being compacted (i.e., before we have compacted it).\n",
     "\n",
     "```c++\n",
     "cnt = 0;\n",
@@ -337,19 +305,31 @@
     "```\n",
     "In other words, we're converting from a stride-based representation of the matrix to a purely sequential one.\n",
     "\n",
-    "Now, the challenge in implementing `Compact()` is that you want the method to work for any number of input dimensions.  It's easy to specialize for different fixed-dimension-size arrays, but for a generic implementation, you'll want to think about how to do this same operation where you effectively want a \"variable number of for loops\".  As a hint, one way to do this is to maintain a vector of indices (of size equal to the number of dimensions), and then manually increment them in a loop (including a \"carry\" operation when any of the reaches their maximum size).\n",
+    "Now, the challenge in implementing `Compact()` is that you want the method to work for **any** number of input dimensions.  It's easy to specialize for different fixed-dimension-size arrays, but for a generic implementation, you'll want to think about how to do this same operation where you effectively want a \"variable number of `for` loops\".  As a hint, one way to do this is to maintain a `vector` of indices (of size equal to the number of dimensions), and then manually increment them in a loop (including a \"carry\" operation when any of the reaches their maximum size).\n",
     "\n",
-    "However, if you get really stuck with this, you can alway use the fact that we're probably not going to ask you to deal with matrices of more than 6 dimensions (though we _will_ use 6 dimensions, for the im2col operation we discussed in class).\n",
+    "However, if you get really stuck with this, you can alway use the fact that we're probably not going to ask you to deal with matrices of more than $6$ dimensions (though we **will** use $6$ dimensions, for the im2col operation we discussed in class)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3a7d2a9-8c8d-4991-8599-ba15c090d96e",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01b2da64-4dc9-41ce-8cc2-1b20d5ea89c4",
+   "metadata": {},
+   "source": [
+    "### Connection to `setitem`\n",
     "\n",
-    "\n",
-    "#### The connection to setitem\n",
-    "The setitem functionality, while seemingly quite different, is actually intimately related to `Compact()`.  `__setitem()__` is the Python function called when setting some elements of the object, i.e.,\n",
+    "The `setitem` functionality, while seemingly quite different, is actually intimately related to `Compact()`.  `__setitem()__` is the Python function called when setting some elements of the object, i.e.,\n",
     "```python\n",
-    "A[::2,4:5,9] = 0 # or = some_other_array\n",
+    "A[ : :2, 4:5, 9] = 0 # or = some_other_array\n",
     "```\n",
-    "How would you go about implementing this?  In the `__getitem()__` call above, you already implemented a method to take a subset of a matrix without copying (but just modifying strides).  But how would you actually go about _setting_ elements of this array?  In virtually all the other settings in this homework, we call `.compact()` before setting items in an output array, but in this case it doesn't work: calling `.compact()` would copy the subset array to some new memory, but the whole point of the `__setitem__()` call is that we want to modify existing memory.\n",
+    "How would you go about implementing this?  In the `__getitem()__` call above, you already implemented a method to take a subset of a matrix without copying (but just modifying strides).  But how would you actually go about setting elements of this array?  In virtually all the other settings in this homework, we call `.compact()` before setting items in an output array, but in this case it **doesn't** work: calling `.compact()` would copy the subset array to some new memory, but the whole point of the `__setitem__()` call is that we want to modify existing memory.\n",
     "\n",
-    "If you think about this for a while, you'll realize that the answer looks a lot like `.compact()` but in reverse.  If we want to assign a (itself already compact) right hand side matrix to a `__getitem()__` results, then we need to here like `shape` and `stride` be those fields of the _output_ matrix.  Then we could implement the setitem call as follows\n",
+    "If you think about this for a while, you'll realize that the answer looks a lot like `.compact()` but in reverse.  If we want to assign a (itself already compact) right hand side matrix to a `__getitem()__` results, then we need here like `shape` and `stride` to be those fields of the **output** matrix.  Then we could implement the setitem call as follows\n",
     "\n",
     "```c++\n",
     "cnt = 0;\n",
@@ -363,12 +343,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "8f154cf2",
    "metadata": {
     "id": "758969a1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform linux -- Python 3.9.13, pytest-7.1.3, pluggy-1.0.0 -- /home/willyu/anaconda3/envs/10-414/bin/python3\n",
+      "cachedir: .pytest_cache\n",
+      "rootdir: /home/willyu/10-414/hw3\n",
+      "plugins: anyio-3.6.1\n",
+      "collected 136 items / 121 deselected / 15 selected                             \u001b[0m\n",
+      "\n",
+      "tests/test_ndarray.py::test_compact[cpu-transpose] \u001b[32mPASSED\u001b[0m\u001b[32m                [  6%]\u001b[0m\n",
+      "tests/test_ndarray.py::test_compact[cpu-broadcast_to] \u001b[32mPASSED\u001b[0m\u001b[32m             [ 13%]\u001b[0m\n",
+      "tests/test_ndarray.py::test_compact[cpu-reshape1] \u001b[32mPASSED\u001b[0m\u001b[32m                 [ 20%]\u001b[0m\n",
+      "tests/test_ndarray.py::test_compact[cpu-reshape2] \u001b[32mPASSED\u001b[0m\u001b[32m                 [ 26%]\u001b[0m\n",
+      "tests/test_ndarray.py::test_compact[cpu-reshape3] \u001b[32mPASSED\u001b[0m\u001b[32m                 [ 33%]\u001b[0m\n",
+      "tests/test_ndarray.py::test_compact[cpu-getitem1] \u001b[32mPASSED\u001b[0m\u001b[32m                 [ 40%]\u001b[0m\n",
+      "tests/test_ndarray.py::test_compact[cpu-getitem2] \u001b[32mPASSED\u001b[0m\u001b[32m                 [ 46%]\u001b[0m\n",
+      "tests/test_ndarray.py::test_compact[cpu-transposegetitem] \u001b[32mPASSED\u001b[0m\u001b[32m         [ 53%]\u001b[0m\n",
+      "tests/test_ndarray.py::test_setitem_ewise[cpu-params0] \u001b[32mPASSED\u001b[0m\u001b[32m            [ 60%]\u001b[0m\n",
+      "tests/test_ndarray.py::test_setitem_ewise[cpu-params1] \u001b[32mPASSED\u001b[0m\u001b[32m            [ 66%]\u001b[0m\n",
+      "tests/test_ndarray.py::test_setitem_ewise[cpu-params2] \u001b[32mPASSED\u001b[0m\u001b[32m            [ 73%]\u001b[0m\n",
+      "tests/test_ndarray.py::test_setitem_scalar[cpu-params0] \u001b[32mPASSED\u001b[0m\u001b[32m           [ 80%]\u001b[0m\n",
+      "tests/test_ndarray.py::test_setitem_scalar[cpu-params1] \u001b[32mPASSED\u001b[0m\u001b[32m           [ 86%]\u001b[0m\n",
+      "tests/test_ndarray.py::test_setitem_scalar[cpu-params2] \u001b[32mPASSED\u001b[0m\u001b[32m           [ 93%]\u001b[0m\n",
+      "tests/test_ndarray.py::test_setitem_scalar[cpu-params3] \u001b[32mPASSED\u001b[0m\u001b[32m           [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m====================== \u001b[32m\u001b[1m15 passed\u001b[0m, \u001b[33m121 deselected\u001b[0m\u001b[32m in 0.20s\u001b[0m\u001b[32m ======================\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "!python3 -m pytest -v -k \"(compact or setitem) and cpu\""
    ]
