--- a/l13/hw_acc.ipynb
+++ b/l13/hw_acc.ipynb
@@ -827,7 +827,7 @@
     "\\begin{align*}\n",
     "\\verb|w|[i, j]\n",
     "&=\n",
-    "\\verb|x|[\\color{blue}{1} + \\verb|strides|[0] \\times i + \\verb|strides|[1] \\times j] \\\\\n",
+    "\\verb|x|[\\color{blue}{\\verb|offset|} + \\verb|strides|[0] \\times i + \\verb|strides|[1] \\times j] \\\\\n",
     "&=\n",
     "\\verb|x|[\\color{blue}{1} + 3i + \\color{gray}{1}j]\n",
     "\\end{align*}\n",
