--- a/hw4/hw4.ipynb
+++ b/hw4/hw4.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,9 +397,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform linux -- Python 3.9.13, pytest-7.1.3, pluggy-1.0.0 -- /home/willyu/anaconda3/envs/10-414/bin/python3\n",
+      "cachedir: .pytest_cache\n",
+      "rootdir: /home/willyu/10-414/hw4\n",
+      "plugins: anyio-3.6.1\n",
+      "collected 1803 items / 1791 deselected / 12 selected                           \u001b[0m\u001b[1m\n",
+      "\n",
+      "tests/test_cifar_ptb_data.py::test_cifar10_dataset[True] \u001b[32mPASSED\u001b[0m\u001b[32m          [  8%]\u001b[0m\n",
+      "tests/test_cifar_ptb_data.py::test_cifar10_dataset[False] \u001b[32mPASSED\u001b[0m\u001b[32m         [ 16%]\u001b[0m\n",
+      "tests/test_cifar_ptb_data.py::test_cifar10_loader[cpu-True-1] \u001b[32mPASSED\u001b[0m\u001b[32m     [ 25%]\u001b[0m\n",
+      "tests/test_cifar_ptb_data.py::test_cifar10_loader[cpu-True-15] \u001b[32mPASSED\u001b[0m\u001b[32m    [ 33%]\u001b[0m\n",
+      "tests/test_cifar_ptb_data.py::test_cifar10_loader[cpu-False-1] \u001b[32mPASSED\u001b[0m\u001b[32m    [ 41%]\u001b[0m\n",
+      "tests/test_cifar_ptb_data.py::test_cifar10_loader[cpu-False-15] \u001b[32mPASSED\u001b[0m\u001b[32m   [ 50%]\u001b[0m\n",
+      "tests/test_cifar_ptb_data.py::test_cifar10_loader[cuda-True-1] \u001b[32mPASSED\u001b[0m\u001b[32m    [ 58%]\u001b[0m\n",
+      "tests/test_cifar_ptb_data.py::test_cifar10_loader[cuda-True-15] \u001b[32mPASSED\u001b[0m\u001b[32m   [ 66%]\u001b[0m\n",
+      "tests/test_cifar_ptb_data.py::test_cifar10_loader[cuda-False-1] \u001b[32mPASSED\u001b[0m\u001b[32m   [ 75%]\u001b[0m\n",
+      "tests/test_cifar_ptb_data.py::test_cifar10_loader[cuda-False-15] \u001b[32mPASSED\u001b[0m\u001b[32m  [ 83%]\u001b[0m\n",
+      "tests/test_conv.py::test_train_cifar10[needle.backend_ndarray.ndarray_backend_cpu] \u001b[31mFAILED\u001b[0m\u001b[31m [ 91%]\u001b[0m\n",
+      "tests/test_conv.py::test_train_cifar10[needle.backend_ndarray.ndarray_backend_cuda] \u001b[31mFAILED\u001b[0m\u001b[31m [100%]\u001b[0m\n",
+      "\n",
+      "=================================== FAILURES ===================================\n",
+      "\u001b[31m\u001b[1m________ test_train_cifar10[needle.backend_ndarray.ndarray_backend_cpu] ________\u001b[0m\n",
+      "\n",
+      "device = cpu()\n",
+      "\n",
+      "    \u001b[37m@pytest\u001b[39;49;00m.mark.parametrize(\u001b[33m\"\u001b[39;49;00m\u001b[33mdevice\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m, _DEVICES)\n",
+      "    \u001b[94mdef\u001b[39;49;00m \u001b[92mtest_train_cifar10\u001b[39;49;00m(device):\n",
+      "        np.random.seed(\u001b[94m0\u001b[39;49;00m)\n",
+      "        dataset = ndl.data.CIFAR10Dataset(\u001b[33m\"\u001b[39;49;00m\u001b[33m./data/cifar-10-batches-py\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m, train=\u001b[94mTrue\u001b[39;49;00m)\n",
+      "        dataloader = ndl.data.DataLoader(\\\n",
+      "                 dataset=dataset,\n",
+      "                 batch_size=\u001b[94m128\u001b[39;49;00m,\n",
+      "                 shuffle=\u001b[94mFalse\u001b[39;49;00m\n",
+      "                 \u001b[90m# collate_fn=ndl.data.collate_ndarray,\u001b[39;49;00m\n",
+      "                 \u001b[90m# drop_last=False,\u001b[39;49;00m\n",
+      "                 \u001b[90m# device=device,\u001b[39;49;00m\n",
+      "                 \u001b[90m# dtype=\"float32\"\u001b[39;49;00m\n",
+      "                 )\n",
+      "        \u001b[94mfrom\u001b[39;49;00m \u001b[04m\u001b[96mapps\u001b[39;49;00m\u001b[04m\u001b[96m.\u001b[39;49;00m\u001b[04m\u001b[96mmodels\u001b[39;49;00m \u001b[94mimport\u001b[39;49;00m ResNet9\n",
+      "        np.random.seed(\u001b[94m0\u001b[39;49;00m)\n",
+      ">       model = ResNet9(device=device, dtype=\u001b[33m\"\u001b[39;49;00m\u001b[33mfloat32\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m)\n",
+      "\n",
+      "ResNet9    = <class 'apps.models.ResNet9'>\n",
+      "dataloader = <needle.data.DataLoader object at 0x7fa3377d2490>\n",
+      "dataset    = <needle.data.CIFAR10Dataset object at 0x7fa3378205e0>\n",
+      "device     = cpu()\n",
+      "\n",
+      "\u001b[1m\u001b[31mtests/test_conv.py\u001b[0m:466: \n",
+      "_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ \n",
+      "\n",
+      "self = <apps.models.ResNet9 object at 0x7fa3377d2460>, device = cpu()\n",
+      "dtype = 'float32'\n",
+      "\n",
+      "    \u001b[94mdef\u001b[39;49;00m \u001b[92m__init__\u001b[39;49;00m(\u001b[96mself\u001b[39;49;00m, device=\u001b[94mNone\u001b[39;49;00m, dtype=\u001b[33m\"\u001b[39;49;00m\u001b[33mfloat32\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m):\n",
+      "        \u001b[96msuper\u001b[39;49;00m().\u001b[92m__init__\u001b[39;49;00m()\n",
+      "        \u001b[90m### BEGIN YOUR SOLUTION ###\u001b[39;49;00m\n",
+      ">       \u001b[94mraise\u001b[39;49;00m \u001b[96mNotImplementedError\u001b[39;49;00m() \u001b[90m###\u001b[39;49;00m\n",
+      "\u001b[1m\u001b[31mE       NotImplementedError\u001b[0m\n",
+      "\n",
+      "__class__  = <class 'apps.models.ResNet9'>\n",
+      "device     = cpu()\n",
+      "dtype      = 'float32'\n",
+      "self       = <apps.models.ResNet9 object at 0x7fa3377d2460>\n",
+      "\n",
+      "\u001b[1m\u001b[31mapps/models.py\u001b[0m:14: NotImplementedError\n",
+      "\u001b[31m\u001b[1m_______ test_train_cifar10[needle.backend_ndarray.ndarray_backend_cuda] ________\u001b[0m\n",
+      "\n",
+      "device = cuda()\n",
+      "\n",
+      "    \u001b[37m@pytest\u001b[39;49;00m.mark.parametrize(\u001b[33m\"\u001b[39;49;00m\u001b[33mdevice\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m, _DEVICES)\n",
+      "    \u001b[94mdef\u001b[39;49;00m \u001b[92mtest_train_cifar10\u001b[39;49;00m(device):\n",
+      "        np.random.seed(\u001b[94m0\u001b[39;49;00m)\n",
+      "        dataset = ndl.data.CIFAR10Dataset(\u001b[33m\"\u001b[39;49;00m\u001b[33m./data/cifar-10-batches-py\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m, train=\u001b[94mTrue\u001b[39;49;00m)\n",
+      "        dataloader = ndl.data.DataLoader(\\\n",
+      "                 dataset=dataset,\n",
+      "                 batch_size=\u001b[94m128\u001b[39;49;00m,\n",
+      "                 shuffle=\u001b[94mFalse\u001b[39;49;00m\n",
+      "                 \u001b[90m# collate_fn=ndl.data.collate_ndarray,\u001b[39;49;00m\n",
+      "                 \u001b[90m# drop_last=False,\u001b[39;49;00m\n",
+      "                 \u001b[90m# device=device,\u001b[39;49;00m\n",
+      "                 \u001b[90m# dtype=\"float32\"\u001b[39;49;00m\n",
+      "                 )\n",
+      "        \u001b[94mfrom\u001b[39;49;00m \u001b[04m\u001b[96mapps\u001b[39;49;00m\u001b[04m\u001b[96m.\u001b[39;49;00m\u001b[04m\u001b[96mmodels\u001b[39;49;00m \u001b[94mimport\u001b[39;49;00m ResNet9\n",
+      "        np.random.seed(\u001b[94m0\u001b[39;49;00m)\n",
+      ">       model = ResNet9(device=device, dtype=\u001b[33m\"\u001b[39;49;00m\u001b[33mfloat32\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m)\n",
+      "\n",
+      "ResNet9    = <class 'apps.models.ResNet9'>\n",
+      "dataloader = <needle.data.DataLoader object at 0x7fa325180a90>\n",
+      "dataset    = <needle.data.CIFAR10Dataset object at 0x7fa325180c10>\n",
+      "device     = cuda()\n",
+      "\n",
+      "\u001b[1m\u001b[31mtests/test_conv.py\u001b[0m:466: \n",
+      "_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ \n",
+      "\n",
+      "self = <apps.models.ResNet9 object at 0x7fa325180970>, device = cuda()\n",
+      "dtype = 'float32'\n",
+      "\n",
+      "    \u001b[94mdef\u001b[39;49;00m \u001b[92m__init__\u001b[39;49;00m(\u001b[96mself\u001b[39;49;00m, device=\u001b[94mNone\u001b[39;49;00m, dtype=\u001b[33m\"\u001b[39;49;00m\u001b[33mfloat32\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m):\n",
+      "        \u001b[96msuper\u001b[39;49;00m().\u001b[92m__init__\u001b[39;49;00m()\n",
+      "        \u001b[90m### BEGIN YOUR SOLUTION ###\u001b[39;49;00m\n",
+      ">       \u001b[94mraise\u001b[39;49;00m \u001b[96mNotImplementedError\u001b[39;49;00m() \u001b[90m###\u001b[39;49;00m\n",
+      "\u001b[1m\u001b[31mE       NotImplementedError\u001b[0m\n",
+      "\n",
+      "__class__  = <class 'apps.models.ResNet9'>\n",
+      "device     = cuda()\n",
+      "dtype      = 'float32'\n",
+      "self       = <apps.models.ResNet9 object at 0x7fa325180970>\n",
+      "\n",
+      "\u001b[1m\u001b[31mapps/models.py\u001b[0m:14: NotImplementedError\n",
+      "=========================== short test summary info ============================\n",
+      "FAILED tests/test_conv.py::test_train_cifar10[needle.backend_ndarray.ndarray_backend_cpu]\n",
+      "FAILED tests/test_conv.py::test_train_cifar10[needle.backend_ndarray.ndarray_backend_cuda]\n",
+      "\u001b[31m================ \u001b[31m\u001b[1m2 failed\u001b[0m, \u001b[32m10 passed\u001b[0m, \u001b[33m1791 deselected\u001b[0m\u001b[31m in 2.51s\u001b[0m\u001b[31m =================\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "!python3 -m pytest -l -v -k \"cifar10\""
    ]
@@ -423,23 +543,23 @@
     "\n",
     "Here's an outline of what you will do in this task.\n",
     "\n",
-    "In `python/needle/backend_ndarray/ndarray.py`, implement:\n",
+    "In `backend_ndarray/ndarray.py`, implement:\n",
     "- `flip`\n",
     "- `pad`\n",
     "\n",
-    "In `python/needle/ops.py`, implement (forward and backward):\n",
+    "In `ops.py`, implement (forward and backward):\n",
     "- `Flip`\n",
     "- `Dilate`\n",
     "- `UnDilate`\n",
     "- `Conv`\n",
     "\n",
-    "In `python/needle/nn.py`, implement:\n",
+    "In `nn.py`, implement:\n",
     "- `Flatten`\n",
     "- `Conv`\n",
     "\n",
-    "In `python/apps/models.py`, fill in the `ResNet9` class.  \n",
+    "In `../apps/models.py`, fill in the `ResNet9` class.  \n",
     "\n",
-    "In `apps/simple_training.py`, fill in:\n",
+    "In `../apps/simple_training.py`, fill in:\n",
     "- `epoch_general_cifar10`,\n",
     "- `train_cifar10`\n",
     "- `evaluate_cifar10`\n",
@@ -453,17 +573,11 @@
    "source": [
     "### Padding ndarrays\n",
     "\n",
-    "Convolution as typically implemented in deep learning libraries cuts down the size of inputs;\n",
-    "e.g., a (1, 32, 32, 3) image convolved with a 3x3 filter would give a (1, 30, 30, c) output.\n",
-    "A way around this is to pad the input ndarray before performing convolution, e.g., pad with zeros to get a (1, 34, 34, 3) ndarray so that the result is (1, 32, 32, 3). \n",
+    "Convolution as typically implemented in deep learning libraries cuts down the size of inputs, e.g., a $(1, 32, 32, 3)$ image convolved with a $3 \\times 3$ filter would give a $(1, 30, 30, \\verb|c|)$ output. A way around this is to pad the input NDArray before performing convolution, e.g., pad with zeros to get a $(1, 34, 34, 3)$ NDArray so that the result remains $(1, 32, 32, \\verb|c|)$. Padding is also **required** for the **backward pass** of convolution.\n",
     "\n",
-    "Padding is also required for the backward pass of convolution.\n",
+    "You should implement `pad` in `ndarray.py` to closely reflect the behavior of [`np.pad`](https://numpy.org/doc/stable/reference/generated/numpy.pad.html). That is, `pad` should take a tuple of $2$-tuples with length equal to the number of dimensions of the array, where each element in the $2$-tuple corresponds to \"left padding\" and \"right padding\", respectively.\n",
     "\n",
-    "You should implement `pad` in `ndarray.py` to closely reflect the behavior of `np.pad`.\n",
-    "That is, `pad` should take a tuple of 2-tuples with length equal to the number of dimensions of the array,\n",
-    "where each element in the 2-tuple corresponds to \"left padding\" and \"right padding\", respectively.\n",
-    "\n",
-    "For example, if `A` is a (10, 32, 32, 8) ndarray (think NHWC), then `A.pad( (0, 0), (2, 2), (2, 2), (0, 0) )` would be a (10, 36, 36, 8) ndarray where the \"spatial\" dimension has been padded by two zeros on all sides."
+    "For example, if `A` is a $(10, 32, 32, 8)$ NDArray (NHWC), then `A.pad( (0, 0), (2, 2), (2, 2), (0, 0) )` would be a $(10, 36, 36, 8)$ NDArray where the \"spatial\" dimension has been padded by two zeros on all sides."
    ]
   },
   {
