add comment and link

--- a/l14.ipynb
+++ b/l14.ipynb
@@ -280,7 +280,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# `W1` is a rank-4 tensor instead of a matrix.\n",
+    "# `W1` is a rank-4 tensor instead of a matrix. NumPy `@` operation between\n",
+    "# `Z` and `W1`, both of which are rank-4 tensors, amounts to batch matrix\n",
+    "# multiplication, and that requires identical leading dimensions except the\n",
+    "# last two.\n",
     "out2 = Z @ W1[0,0]\n",
     "np.testing.assert_allclose(out, out2)"
    ]
@@ -443,7 +446,7 @@
     "    \n",
     "where `TILE` is some small constant (like $4$), which allows the CPU to use its vector processor to perform very efficient operations on `TILE x TILE` blocks. Importantly, what enables this to be so efficient is that in the standard memory ordering for an $n$D array, this grouping would locate all `TILE x TILE` block consecutively in memory, so they could quickly be loaded in and out of cache / registers / etc.\n",
     "\n",
-    "How exactly would we convert a matrix to this form?  You could imagine how to manually copy from one matrix type to another, but it would be rather cumbersome to write this code each time you wanted to experiment with different (and in order for the code to be efficient, you'd need to write it in C/C++ as well, which could get to be a pain).  Instead, we're going to show you how to do this using the handy function [`np.lib.stride_tricks.as_strided()`](https://numpy.org/doc/stable/reference/generated/numpy.lib.stride_tricks.as_strided.html), which lets you create new matrices by manually manipulating the strides of a matrix but **not** changing the data; we can then use [`np.ascontiguousarray()`](https://numpy.org/doc/stable/reference/generated/numpy.ascontiguousarray.html) to lay out the memory sequentially.  This sets of tricks let us rearrange matrices fairly efficiently in just one or two lines of numpy code."
+    "How exactly would we convert a matrix to this form?  You could imagine how to manually copy from one matrix type to another, but it would be rather cumbersome to write this code each time you wanted to experiment with different (and in order for the code to be efficient, you'd need to write it in C/C++ as well, which could get to be a pain).  Instead, we're going to show you how to do this using the handy function [`np.lib.stride_tricks.as_strided()`](https://numpy.org/doc/stable/reference/generated/numpy.lib.stride_tricks.as_strided.html), which lets you create new matrices by manually manipulating the strides of a matrix but **not** changing the data; we can then use [`np.ascontiguousarray()`](https://numpy.org/doc/stable/reference/generated/numpy.ascontiguousarray.html) to lay out the memory sequentially.  This sets of tricks let us rearrange matrices fairly efficiently in just one or two lines of NumPy code."
    ]
   },
   {
@@ -453,7 +456,7 @@
    "source": [
     "### An example: a $6 \\times 6$ 2D array\n",
     "\n",
-    "To see how this works, let's consider an example 6x6 numpy array."
+    "To see how this works, let's consider an example $6 \\times 6$ NumPy array."
    ]
   },
   {
@@ -840,7 +843,7 @@
    "source": [
     "Let's consider finally the \"real\" way to implement convolutions, which will end up being about as fast as PyTorch's implementation.  Essentially, we want to bundle all the computation needed for convolution into a **single** matrix multiplication, which will then leverage all the optimizations that we can implement for normal matrix multiplication.\n",
     "\n",
-    "They key approach to doing this is called the `im2col` operator, which \"unfolds\" a $4$D array into exactly the form needed to perform multiplication via convolution.  Let's see an example of how this works using a simple $2$D array, before we move to the $4$D case.  Let's consider the following array we used above in the first section."
+    "They key approach to doing this is called the `im2col` operator, which \"[unfolds](https://pytorch.org/docs/stable/generated/torch.nn.Unfold.html)\" a $4$D array into exactly the form needed to perform multiplication via convolution.  Let's see an example of how this works using a simple $2$D array, before we move to the $4$D case.  Let's consider the following array we used above in the first section."
    ]
   },
   {
